<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">

    <RelativeLayout
        android:id="@+id/relative123"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/reset_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_pass"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            ></TextView>

    </RelativeLayout>

    <EditText
        android:id="@+id/find_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reset_phone"
        android:background="@drawable/input_design"
        android:layout_below="@+id/relative123"
        android:padding="14dp"
        android:layout_margin="15dp"/>


    <TextView
        android:id="@+id/title_ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_answer"
        android:gravity="center"
        android:layout_below="@+id/find_phone_number"
        android:textSize="26sp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_ques"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/reset_ques1"
        android:padding="14dp" />

    <EditText
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_1"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/reset_ques2"
        android:padding="14dp" />

    <Button
        android:id="@+id/verify_reset_btn"
        android:layout_width="388dp"
        android:layout_height="68dp"
        android:layout_below="@+id/question_2"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttons"
        android:padding="14dp"
        android:text="@string/reset_verfify"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
