<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmFinalOrderActivity"
    android:background="@drawable/background_login_signup">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/confirmOrdertxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmOrderShippingDetails"
                android:textSize="18dp"
                android:textColor="@color/colorPrimary"
                android:layout_margin="45dp"
                android:textAlignment="center"
                android:textStyle="bold"
                ></TextView>

            <EditText
                android:id="@+id/confirmorder_shipmentfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmOrdertxt"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/confirmorderhint_fname"
                ></EditText>

            <EditText
                android:id="@+id/confirmorder_shipmentlName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmorder_shipmentfName"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/confirmorderhint_lname"
                ></EditText>


            <EditText
                android:id="@+id/confirmorder_shipment_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmorder_shipmentlName"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="number"
                android:hint="@string/confirmorderhint_phoneNum"

                ></EditText>

            <EditText
                android:id="@+id/confirmorder_shipment_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmorder_shipment_phone_num"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/confirmOrderaddress_hint"

                ></EditText>

            <EditText
                android:id="@+id/confirmorder_shipment_address_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmorder_shipment_address"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/confirmmOrderaddress_city_hint"

                ></EditText>


            <Button
                android:id="@+id/confrim_btn_finalOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmorder_shipment_address_city"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/confirmmOrder"
                android:background="@drawable/background_login_signup"
                android:textColor="@color/white"
                android:textSize="20dp"
                ></Button>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>