<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoppingcart.login"
    android:background="@drawable/background_login_signup">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/logo"
        android:elevation="10dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/background"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="493dp">

            <Button
                android:id="@+id/btnlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_password"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_login_signup"
                android:fontFamily="sans-serif"
                android:text="@string/user_log_btn"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/forgetPasswordLink"
                android:layout_below="@+id/text_input_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/forgotPass"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/remembermechekbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_password"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="320dp"
                android:text="@string/remember" />

            <TextView
                android:id="@+id/admin_tv"
                android:layout_width="41dp"
                android:layout_height="25dp"
                android:layout_below="@+id/text_input_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="160dp"
                android:text="@string/admin_log" />


            <TextView
                android:id="@+id/LinkForUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="160dp"
                android:text="@string/notadmin" />


            <TextView
                android:id="@+id/new_accnt_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="190dp"
                android:text="@string/new_accnt_tv" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_email"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pwtv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />



            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emtv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logphone"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>





</RelativeLayout>