<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/prod_name_cart"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/prod_name_shopping"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            ></TextView>

        <TextView
            android:id="@+id/prod_quan_cart"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:text="@string/prod_quan_shopping"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            ></TextView>


        <TextView
            android:id="@+id/prod_price_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prod_price_shopping"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_below="@id/prod_quan_cart"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            ></TextView>



    </RelativeLayout>

</android.support.v7.widget.CardView>